--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=user-manager-demo
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+#spring.jpa.properties.hibernate.generate_statistics=true
+spring.mvc.problemdetails.enabled=true
