--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ networks:
         - subnet: 172.25.0.0/24
 services:
   app:
-    image: andreacoghi-biters/user-manager-demo:0.0.1-SNAPSHOT
+    image: andreacoghi-biters/user-manager-demo:1.0.0
     container_name: user-manager-demo-app
     restart: unless-stopped
     ports:
